<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/restaurantSearchFragment_id"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/title_bottombar_restaurantSearch" />

    <item
        android:id="@+id/favoriteRestaurantFragment_id"
        android:icon="@drawable/ic_favorite_icon"
        android:title="@string/title_bottombar_favoriteRestaurant" />

    <item
        android:id="@+id/holder_history_id"
        android:icon="@drawable/ic_baseline_receipt_24px"
        android:title="@string/title_bottombar_historyOrder" />

    <item
        android:id="@+id/myReviewsFragment_id"
        android:icon="@drawable/ic_baseline_stars_24px"
        android:title="@string/title_bottombar_myReviews" />

    <item
        android:id="@+id/mainProfile_id"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/title_bottombar_account" />

</menu>
