<RelativeLayout android:background="#e1e1e1"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/total"
            android:textColor="@color/colorTextField"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_total"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="-1dp"
        android:layout_marginEnd="14dp">

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextField"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/time_default"
            android:inputType="none"
            android:maxLength="6"
            android:textSize="20sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_cart" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_above="@+id/btn_placeorder"
        android:layout_below="@+id/time_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    </android.support.v7.widget.RecyclerView>


    <Button
        android:id="@+id/btn_placeorder"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/confirm_order"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:theme="@style/Theme.MaterialButton">
    </Button>

</RelativeLayout>