<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPanelPrimary"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="PolEATo"
            android:textColor="#ffffff"
            android:textSize="80sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@id/text_linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/text_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:theme="@style/FloatLabel">

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:theme="@style/FloatLabel">

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiName"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:theme="@style/FloatLabel">

                <EditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiSurname"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:theme="@style/FloatLabel">

                <EditText
                    android:id="@+id/edSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/surname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiAddress"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:theme="@style/FloatLabel">

                <EditText
                    android:id="@+id/edAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiPhone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:theme="@style/FloatLabel">

                <EditText
                    android:id="@+id/edPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/surname"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/ButtonSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:text="@string/signup"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />

                <Button
                    android:id="@+id/ButtonSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:text="@string/signin"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>