<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPanelPrimary"
    tools:context=".SignInActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:layout_marginTop="32dp"
        android:text="PolEATo"
        android:textColor="#ffffff"
        android:textSize="80sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/button_linearlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight=".3" />

    <LinearLayout
        android:id="@+id/button_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/text_linearLayout"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintVertical_weight=".3">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:elevation="@dimen/default_gap"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:elevation="@dimen/default_gap"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_linearlayout"
        app:layout_constraintVertical_weight=".3">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="#ffffff"
            android:theme="@style/FloatLabel">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:singleLine="true"
                android:textColor="@color/colorTextSubField"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="#ffffff"
            android:theme="@style/FloatLabel">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="40"
                android:singleLine="true"
                android:textColor="@color/colorTextSubField"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/ButtonSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:text="@string/signin"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/ButtonSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:text="@string/signup"
                android:layout_marginEnd="16dp" />

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>